# todo_python

todo_backend/: pyproject.toml
todo_backend/fastapi_with_neon/: const.py  db_connector.py  db_controllers.py  db_structure.py  route.py  setting.py  utils.py
todo_backend/tests/: test_main.py
todo_frontend/: package-lock.json  package.json
todo_frontend/src/app/: TodoForm.tsx  TodoItem.tsx  layout.tsx  loading.tsx  page.tsx
todo_frontend/src/app/context/: TodoProvider.tsx  todoCtx.ts
todo_frontend/src/components/interfaces/: index.ts
